--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -114,10 +114,10 @@ button:hover {
 	background-repeat: no-repeat;
 	background-size: cover;	
 
-	animation-name: parallaxBack;
+/*	animation-name: parallaxBack;
 	animation-duration: 3s;
 	animation-timing-function: ease-out;
-	animation-fill-mode: forwards;
+	animation-fill-mode: forwards;*/
 }
 
 @keyframes parallaxBack {
