--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
         <form class="create-update-form" action="/" method="POST">
             <div class="form-group">
                 <label for="bn">Burger Name</label>
-                <input type="text" id="bn" name="name" class="drawn-border">
+                <input type="text" id="bn" name="burger_name" class="drawn-border">
                 <button class="add-burger" type="submit">Add Burger</button>
             </div>
         </form>
@@ -18,7 +18,7 @@
         <div class="options">
             <div>
                 <h2>Available Burgers</h2>
-                <ul>
+                <ul id="avail-burgers">
                   {{#each burgers}}
                    {{#unless this.devoured}}
                       <li>
@@ -36,11 +36,15 @@
         <div class="options">
             <h2>Devoured Burgers</h2>
 
-            <ul>
-              {{#each burgers}}
+            <ul id="avail-burgers">
+              {{#each this}}
                 {{#if this.devoured}}
                   <li>
                     {{this.burger_name}}
+                    <form action="/{{this.id}}?_method=DELETE" method="POST">
+                      <input type="hidden" name="id" value="{{this.id}}">
+                      <button type="submit">DELETE!</button>
+                    </form>
                   </li>
                 {{/if}}
               {{/each}}
