--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 	    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+		<script src="/js/app.js"></script>
 		<title>Eat All Da Burgers</title>
 	</head>
 	<body>
@@ -15,15 +16,4 @@
 			{{{ body }}}			
 	</body>
 
-<script type="text/javascript">
-	$('input').on('focusin', function() {
-	  $(this).parent().find('label').addClass('active');
-	});
-
-	$('input').on('focusout', function() {
-	  if (!this.value) {
-	    $(this).parent().find('label').removeClass('active');
-	  }
-	});
-</script>
 </html>
