--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
             <h2>Devoured Burgers</h2>
 
             <ul id="avail-burgers">
-              {{#each this}}
+              {{#each burgers}}
                 {{#if this.devoured}}
                   <li>
                     {{this.burger_name}}
